--- a/po/de.po
+++ b/po/de.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-bad 1.4.1\n"
+"Project-Id-Version: gst-plugins-bad 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:36+0200\n"
-"PO-Revision-Date: 2014-08-31 19:37+0100\n"
+"POT-Creation-Date: 2015-06-24 11:15+0200\n"
+"PO-Revision-Date: 2015-06-11 20:57+0100\n"
 "Last-Translator: Christian Kirbach <christian.kirbach@gmail.com>\n"
 "Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
 "Language: de\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.7.5\n"
 
 msgid "format wasn't negotiated before get function"
 msgstr "das Format wurde vor der get-Funktion nicht ausgehandelt"
@@ -25,7 +25,6 @@ msgstr "das Format wurde vor der get-Funktion nicht ausgehandelt"
 msgid "default GStreamer sound events audiosink"
 msgstr "Voreingestellte GStreamer Tonereignis-Audioziel"
 
-#, fuzzy
 msgid ""
 "GStreamer can play audio using any number of output elements. Some possible "
 "choices are osssink, pulsesink and alsasink. The audiosink can be a partial "
@@ -33,8 +32,8 @@ msgid ""
 msgstr ""
 "GStreamer kann Ton mit einer beliebigen Anzahl an Ausgabeelementen "
 "wiedergeben. Einige Wahlmöglichkeiten sind »osssink«, »pulsesink« und "
-"»alsasink«. Das Audioziel kann eine anteilige Weiterleitung anstelle eines "
-"einzigen Elements sein."
+"»alsasink«. Das Audioziel kann eine teilweise Weiterleitung anstelle nur "
+"eines einzigen Elements sein."
 
 msgid "description for default GStreamer sound events audiosink"
 msgstr "Beschreibung des voreingestellten GStreamer Tonereignis-Audioziel"
@@ -135,8 +134,9 @@ msgstr "Beschreibung der voreingestellten GStreamer-Visualisierung"
 msgid "Describes the selected visualization element."
 msgstr "Beschreibt das gewählte Visualisierungselement."
 
+# OpenCV ist eine freie Programmbibliothek mit Algorithmen für die Bildverarbeitung und maschinelles Sehen.
 msgid "OpenCV failed to load template image"
-msgstr ""
+msgstr "OpenCV konnte nicht die Bildvorlage laden"
 
 msgid "Could not read title information for DVD."
 msgstr "Die Titelinformationen der DVD konnten nicht gelesen werden."
@@ -196,7 +196,7 @@ msgstr ""
 "fest"
 
 msgid "Digitalzoom element cound't be created"
-msgstr ""
+msgstr "Element für Digitalzoom konnte nicht angelegt werden"
 
 msgid "Subpicture format was not configured before data flow"
 msgstr "Format des Unterbilds wurde nicht vor dem Datenfluss konfiguriert"
