--- a/po/uk.po
+++ b/po/uk.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the gst-plugins-bad package.
 #
 # Maxim V. Dziumanenko <dziumanenko@gmail.com>, 2004-2007.
-# Yuri Chornoivan <yurchor@ukr.net>, 2011, 2013, 2014.
+# Yuri Chornoivan <yurchor@ukr.net>, 2011, 2013, 2014, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-bad 1.4.1\n"
+"Project-Id-Version: gst-plugins-bad 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:36+0200\n"
-"PO-Revision-Date: 2014-08-29 08:35+0300\n"
+"POT-Creation-Date: 2015-06-24 11:15+0200\n"
+"PO-Revision-Date: 2015-06-10 22:48+0300\n"
 "Last-Translator: Yuri Chornoivan <yurchor@ukr.net>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
 "Language: uk\n"
@@ -26,7 +26,6 @@ msgstr "формат не було узгоджено до виклику фун
 msgid "default GStreamer sound events audiosink"
 msgstr "типовий приймач звукових подій GStreamer"
 
-#, fuzzy
 msgid ""
 "GStreamer can play audio using any number of output elements. Some possible "
 "choices are osssink, pulsesink and alsasink. The audiosink can be a partial "
@@ -34,8 +33,8 @@ msgid ""
 msgstr ""
 "У GStreamer передбачено можливість відтворення звукових даних за допомогою "
 "довільної кількості елементів виведення. Серед можливих варіантів osssink, "
-"pulsesink та alsasink. Звуковий приймач може бути окремим каналом з "
-"декількох обробників, а не одним елементом."
+"pulsesink та alsasink. Звуковий приймач може бути окремим каналом, а не "
+"одним елементом."
 
 msgid "description for default GStreamer sound events audiosink"
 msgstr "опис типового приймача звукових подій GStreamer"
@@ -135,7 +134,7 @@ msgid "Describes the selected visualization element."
 msgstr "Описує вибраний елемент візуалізації."
 
 msgid "OpenCV failed to load template image"
-msgstr ""
+msgstr "OpenCV не вдалося завантажити зображення шаблону"
 
 msgid "Could not read title information for DVD."
 msgstr "Не вдалося прочитати дані щодо записів на DVD."
@@ -194,7 +193,7 @@ msgstr ""
 "назви файла."
 
 msgid "Digitalzoom element cound't be created"
-msgstr ""
+msgstr "Не вдалося створити елемент цифрового масштабування"
 
 msgid "Subpicture format was not configured before data flow"
 msgstr "Формат підзображення не було налаштовано до створення потоку даних"
